# knuspr-api

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/knuspr/: __init__.py  auth.py  cli.py  client.py  config.py  endpoints.py  exceptions.py  models.py  rate_limiter.py
tests/: conftest.py  test_auth.py  test_client.py  test_models.py  test_rate_limiter.py
tests/fixtures/: cart_response.json  login_error_response.json  login_response.json  order_history_response.json  search_response.json
