[project]
name = "knuspr-api"
version = "0.3.0"
description = "Python wrapper for the Knuspr.de grocery delivery API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Jens Kegelmann" }]
keywords = ["knuspr", "rohlik", "grocery", "delivery", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "python-dotenv>=1.0,<2.0",
    "typer>=0.12,<1.0",
    "rich>=13.0,<14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.8",
]

[project.urls]
Repository = "https://github.com/kegelmeier/knuspr-api"
Issues = "https://github.com/kegelmeier/knuspr-api/issues"
Changelog = "https://github.com/kegelmeier/knuspr-api/blob/main/CHANGELOG.md"

[project.scripts]
knuspr = "knuspr.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knuspr"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: hits the real Knuspr API (deselect with '-m not integration')"]
addopts = "-m 'not integration'"
